home page angular completed
Signed-off-by: himangshu <himangshu@gozoomo.com>

--- a/src/main/html-source/index.html
+++ b/src/main/html-source/index.html
@@ -29,6 +29,8 @@
   <!-- Main App JS -->
   <script src="app.js"></script>
   <script src="partial/home/home.js"></script>
+  <script src="service/api.js"></script>
+  <script src="partial/details/details.js"></script>
   <!-- Add New Component JS Above -->
 
   <div>
